--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: "^1.3.0"
+  firebase_auth: "^1.4.1"
 
 
   # The following adds the Cupertino Icons font to your application.
