--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   firebase_core: ^1.3.0
   firebase_database: ^7.1.1
+  firebase_auth: ^1.4.1
+  flutter_login: ^2.0.0
 
 
 
@@ -50,7 +52,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/background/img.jpg
+    - images/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
