--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -27,6 +27,7 @@ dependencies:
   firebase_database: ^7.1.1
   flutter_login: ^2.0.0
   firebase_auth: ^1.4.1
+  url_launcher: ^6.0.8
 
 
 
